<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="goal">Goal</string>
    <string name="card">Card</string>
    <string name="team_A">Team A</string>
    <string name="team_B">Team B</string>
    <string name="reset">Reset</string>
    <string name="initial_score">0</string>
    <!-- Describes the background image -->
    <string name="desc">Background image</string>
</resources>
