<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".3"
            android:contentDescription="@string/desc"
            android:scaleType="centerCrop"
            android:src="@drawable/stadium" />

        <LinearLayout
            android:id="@+id/tabloid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/team_A"
                    android:textColor="@color/teamName"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/initial_score"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/goalButton"
                    android:onClick="addGoalForTeamA"
                    android:text="@string/goal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="32dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/yellowCardButton"
                        android:onClick="addYellowCardForTeamA"
                        android:text="@string/card" />

                    <TextView
                        android:id="@+id/team_a_yellow_cards"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/initial_score"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="20dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/redCardButton"
                        android:onClick="addRedCardForTeamA"
                        android:text="@string/card" />

                    <TextView
                        android:id="@+id/team_a_red_cards"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/initial_score"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/team_B"
                    android:textColor="@color/teamName"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/initial_score"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/goalButton"
                    android:onClick="addGoalForTeamB"
                    android:text="@string/goal" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="32dp">

                    <TextView
                        android:id="@+id/team_b_yellow_cards"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/initial_score"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/yellowCardButton"
                        android:onClick="addYellowCardForTeamB"
                        android:text="@string/card" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/team_b_red_cards"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/initial_score"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/redCardButton"
                        android:onClick="addRedCardForTeamB"
                        android:text="@string/card" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:onClick="reset"
            android:text="@string/reset" />

    </RelativeLayout>

</ScrollView>